# flights-demo

./: Cargo.toml  README.md
.github/workflows/: pr.yaml
responses/: sfo-osl.json
src/serialization/: mod.rs
src/serialization/booking/: flights.rs  mod.rs
src/serialization/booking/fixture/: response.json
tools/: check  reset-db
