[package]
name = "flights"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "chrono", "json", "postgres", "runtime-tokio-native-tls", "rust_decimal", "uuid" ] }

[lib]
name = "flights"
path = "src/lib.rs"
